Enable position independent code (-fpic) when compiling foreign-dlopen .o files
This is required to link with a shared library.

--- a/foreign-dlopen/Makefile
+++ b/foreign-dlopen/Makefile
@@ -7,6 +7,12 @@ CFLAGS += -DELFCLASS=ELFCLASS64
 
 # Optimize please
 CFLAGS += -Os
+
+# Enable position independent code
+CFLAGS += -fpic
+
+# Use the same flags for assembly
+ASFLAGS = $(CFLAGS)
 # =================================================
 
 
